2013-10-02  Phil Muldoon  <pmuldoon@redhat.com>

	PR python/15579

	* python/python.c: Document gdb.execute command in Python help.

2013-10-02  Phil Muldoon  <pmuldoon@redhat.com>

	* python/py-frame.c (frame_info_to_frame_object): Use
	gdbpy_convert_exception. Clean up Python object on failure.

2013-10-02  Phil Muldoon  <pmuldoon@redhat.com>

	* python/lib/gdb/command/frame_filters.py
	(InfoFrameFilter.list_frame_filters): Retrieve exception manually.
	(ShowFrameFilterPriority.invoke): Ditto.

2013-10-01  Keith Seitz  <keiths@redhat.com>

	* linespec.c (struct ls_parser): Make 'saved_arg' const.
	(parse_linespec): Make 'argptr' const.
	Remove temporary cast of 'argptr' to const char **.
	(decode_line_full): Pass const pointer to parse_linespec.
	(decode_line_1): Likewise.
	(decode_objc): Make local variable 'new_argptr' const.
	(find_function_symbols): Remove temporary cast to char *
	to find_imps.
	* objc-lang.c (find_imps): Make argument 'method' const.
	Return const.
	* objc-lang.h (find_imps): Likewise.

2013-10-01  Keith Seitz  <keiths@redhat.com>

	* completer.c (skip_quoted_chars): Make all arguments const.
	Return const.
	(skip_quoted): Likewise.
	* completer.h (skip_quoted_chars): Likewise.
	(skip_quoted): Likewise.
	* defs.h (skip_quoted): Remove duplicate declaration.
	* jv-exp.y: Include completer.h.
	(yylex): Remove unneccessary cast to char * fro skip_quoted.
	* p-exp.y: Include completer.h.

2013-10-01  Keith Seitz  <keiths@redhat.com>

	* c-exp.y (parse_number): Make first argument const.
	Make a copy of the input to manipulate.
	(c_parse_escape): Make first argument const.
	Make local variable 'tokptr' const.
	(parse_string_or_char): Make first two arguments const.
	(macro_original_text): Make const.
	(lex_one_token): Make local variable 'tokstart' const.
	Likewise for local variables named 'p'.
	Cast away const for struct stoken (temporary).
	* c-lang.h (c_parse_escpae): Make first argument const.